@@ -4,6 +4,7 @@
 
 === 1.0.29 ===
 * Fixed bug in associativity of add, sub, mul, div and bit-and expressions.
+* Added MacOS CI builds.
 
 === 1.0.28 ===
 * Reduced poll interval for ipc::NativeExecutor to 20 milliseconds.
